0.4.17/_sources/gallery/add_points.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_points.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_add_points.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_points.py:


Add points
==========

Display a points layer on top of an image layer using the ``add_points`` and
``add_image`` APIs

.. tags:: visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 10-57



.. image-sg:: /gallery/images/sphx_glr_add_points_001.png
   :alt: add points
   :srcset: /gallery/images/sphx_glr_add_points_001.png
   :class: sphx-glr-single-img





.. code-block:: default


    import numpy as np
    from skimage import data
    from skimage.color import rgb2gray
    import napari


    # add the image
    viewer = napari.view_image(rgb2gray(data.astronaut()))
    # add the points
    points = np.array([[100, 100], [200, 200], [333, 111]])
    size = np.array([10, 20, 20])
    viewer.add_points(points, size=size)

    # unselect the image layer
    viewer.layers.selection.discard(viewer.layers[0])

    # adjust some of the points layer attributes
    layer = viewer.layers[1]

    # change the layer name
    layer.name = 'points'

    # change the layer visibility
    layer.visible = False
    layer.visible = True

    # select the layer
    viewer.layers.selection.add(layer)
    # deselect the layer
    viewer.layers.selection.remove(layer)
    # or: viewer.layers.selection.discard(layer)

    # change the layer opacity
    layer.opacity = 0.9

    # change the layer point symbol using an alias
    layer.symbol = '+'

    # change the layer point out_of_slice_display status
    layer.out_of_slice_display = True

    # change the layer mode
    layer.mode = 'add'

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_points.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: add_points.py <add_points.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: add_points.ipynb <add_points.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
